removed unused imports; added background info

--- a/Global Analysis.ipynb
+++ b/Global Analysis.ipynb
@@ -1,26 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ae96df97",
+   "metadata": {},
+   "source": [
+    "Air Quality in Catalonia challenge is asking participants to use the data from the Catalan Transparency Portal to analyze the evolution of air pollution in Catalonia over the past three decades and develop algorithms to predict air pollutant concentrations. Participants will be asked to do a global analysis of air quality, build algorithms to predict air pollutant concentrations, and write a final report with their approach, results, conclusions, and recommendations"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "1d377743",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"script\"\"\"\n",
-    "import json\n",
-    "import os\n",
-    "import pickle\n",
-    "import sys\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
-    "from matplotlib import rcParams\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn import preprocessing\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "\n",
     "\n",
     "pd.set_option('display.max_columns', 25)\n",
     "plt.rcParams[\"figure.figsize\"] = [10, 6]\n",
@@ -29,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "745127f1",
    "metadata": {},
    "outputs": [
@@ -464,7 +462,7 @@
        "[3106374 rows x 40 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "b1574262",
    "metadata": {},
    "outputs": [],
@@ -488,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "99a1b55e",
    "metadata": {},
    "outputs": [],
@@ -498,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "72f396f8",
    "metadata": {},
    "outputs": [],
@@ -510,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "22bd34c5",
    "metadata": {},
    "outputs": [],
@@ -523,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "c0a87655",
    "metadata": {},
    "outputs": [
@@ -544,7 +542,7 @@
        "Name: CODI EOI, Length: 124, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "3fedd7a0",
    "metadata": {},
    "outputs": [
@@ -582,7 +580,7 @@
        "Name: MAGNITUD, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "d88f1a2e",
    "metadata": {},
    "outputs": [
@@ -604,7 +602,7 @@
        "        42,  44,   3,  58])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "cc07564c",
    "metadata": {},
    "outputs": [],
@@ -626,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "872122ce",
    "metadata": {},
    "outputs": [
@@ -762,7 +760,7 @@
        "[4016 rows x 3 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "3ccbbc72",
    "metadata": {},
    "outputs": [
@@ -956,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "9e5dd75c",
    "metadata": {},
    "outputs": [],
@@ -967,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "id": "9be40aa2",
    "metadata": {},
    "outputs": [
@@ -1605,7 +1603,7 @@
        "331         2.0    1.9    1.7    1.9    2.0    2.1  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1616,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "id": "c039fbaf",
    "metadata": {},
    "outputs": [
@@ -1626,7 +1624,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1647,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "id": "4a309bbe",
    "metadata": {},
    "outputs": [
@@ -1655,7 +1653,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_656861/1270252458.py:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "/tmp/ipykernel_669191/1270252458.py:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  corr = df.corr()\n"
      ]
     },
@@ -1717,7 +1715,7 @@
        "Name: ALTITUD, dtype: float64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1729,7 +1727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "id": "a74376e3",
    "metadata": {},
    "outputs": [
@@ -1739,7 +1737,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1764,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "id": "a28e4140",
    "metadata": {},
    "outputs": [
@@ -1774,7 +1772,7 @@
        "<AxesSubplot: xlabel='AREA URBANA'>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1795,7 +1793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "id": "fcfdecd8",
    "metadata": {},
    "outputs": [
@@ -1805,7 +1803,7 @@
        "<AxesSubplot: xlabel='NOM COMARCA'>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1826,7 +1824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 22,
    "id": "a8e6d631",
    "metadata": {},
    "outputs": [
@@ -1951,7 +1949,7 @@
        "[218 rows x 2 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
