--- a/Global Analysis.ipynb
+++ b/Global Analysis.ipynb
@@ -3215,7 +3215,7 @@
     "We have chosen the pollutant 8 as its the most frequent and We have aggregated the data by day and then month. We also label encoded the stations. We used Random Forest regressor to predict the target  values for the next 24 months. The algo is available at [GitHub](https://github.com/Pfed-prog/Catalonia_Data/blob/main/Algo.ipynb) and [Ocean Protocol](https://market.oceanprotocol.com/asset/did:op:3a74dbc297bca6ce338ce0b7b3e9801e95b08d068473f4a6210196a7f13295c1).\n",
     "\n",
     "\n",
-    "To Build and publish an algorithm to predict the concentration of one pollutant of your choice for each hour of the day from February 15 to 28 - on average for all stations. We add time features and label encoded the stations. We used Random Forest regressor to predict the target  values for the next 14 days. The algo is available at [GitHub](https://github.com/Pfed-prog/Catalonia_Data/blob/main/Algo2.ipynb) and [Ocean Protocol]().\n"
+    "To Build and publish an algorithm to predict the concentration of one pollutant of your choice for each hour of the day from February 15 to 28 - on average for all stations. We add time features and label encoded the stations. We used Random Forest regressor to predict the target  values for the next 14 days. The algo is available at [GitHub](https://github.com/Pfed-prog/Catalonia_Data/blob/main/Algo2.ipynb) and [Ocean Protocol](https://market.oceanprotocol.com/asset/did:op:1d04dd8ff4d0488270c40c551a8e781001c3a6cbe67126e2966e2f9d9abc4f11).\n"
    ]
   },
   {
@@ -3225,6 +3225,14 @@
    "source": [
     "## Summary"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e647ebfe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
