--- a/Global Analysis.ipynb
+++ b/Global Analysis.ipynb
@@ -3227,12 +3227,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e647ebfe",
+   "cell_type": "markdown",
+   "id": "688b362a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "In this project, we have analyzed air quality in Catalonia by using the data from the Catalan Transparency Portal. We have used the data to explore the evolution of air pollution in Catalonia over the past three decades. We have conducted an exploratory data analysis and created visualisations to understand the data. We have also used machine learning algorithms to predict air pollutant concentrations. Finally, we have written a report to summarise our findings.\n",
+    "\n",
+    "Overall, our analysis has shown that air pollution levels in Catalonia are significantly higher in urban areas compared to suburban and rural areas. We have also found that air pollution tends to be worse in winter due to meteorological and human-made factors, and that the diurnal cycle affects the concentration of pollutants in the air. We have also developed two machine learning algorithms to predict air pollutant concentrations for the next 24 months and 14 days."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afa14ec7",
+   "metadata": {},
+   "source": [
+    "### Limitations\n",
+    "\n",
+    "The main limitation of the project was the lack of data. Although we have used the data from the Catalan Transparency Portal, the data was only available from the year 1991 which limits our ability to explore the further trend of air pollution in Catalonia. Additionally, the data was only available for a limited amount of dates which limited our ability to model the data on a more granular level.\n",
+    "\n",
+    "We recommend that future competitions should provide more data in order to be able to explore the trend of air pollution in Catalonia in more detail. Additionally, we recommend that the data should be available on a more granular level in order to be able to model the data more accurately. Finally, we recommend that the data should be provided from a wider range of sources in order to get a more comprehensive view of air pollution in Catalonia."
+   ]
   }
  ],
  "metadata": {
